ends : notation + lemma
Uniformisé les notations :
G,H pour des groupes
X, Y pour des ensembles
\Gamma pour des graphs

--- a/Property FW and wreath products/Bouts/Definitions.tex
+++ b/Property FW and wreath products/Bouts/Definitions.tex
@@ -40,10 +40,11 @@ All the results cited in this section are standard and can be found in any good 
 %
 %
 In what follows, we will always assume that a generating sets of groups are \emph{symmetric}, that is we will look at $S\subset G$ such that $s\in S$ if and only if $s^{-1}\in S$.
+Our graphs will be undirected and we will sometimes identify  graph with its vertex set.
 %
 %
 \begin{defn}
-Let $G$ be a group, $H$ a subgroup of $G$ and $S$ a symmetric\footnote{That is, $s\in S$ if and only if $s^{-1}\in S$.} generating set. The \emph{(left) Schreier graph} $\Sch(G,H;S)$ is the graph with vertices the left cosets $gH=\setst{gh}{h\in H}$ and with an edge between $gH$ and $sgH$ for every $s$ in $S$.
+Let $G$ be a group, $H$ a subgroup of $G$ and $S$ a symmetric generating set. The \emph{(left) Schreier graph} $\Sch(G,H;S)$ is the graph with vertices the left cosets $gH=\setst{gh}{h\in H}$ and with an edge between $gH$ and $sgH$ for every $s$ in $S$.
 \end{defn}
 %
 %
@@ -134,7 +135,7 @@ This leads to the following definition
 Let $G$ and $H$ be groups and $X$ be a set on which $H$ acts.
 The \emph{(retricted) wreath product} $G\wr_XH$ is the group $(\bigoplus_XG)\rtimes H$.
 \end{defn}
-A prominent  source of examples of wreath products are the one of the form $G\wr_HH$, where $H$ acts on itself by left multiplication.
+A prominent  source of examples of wreath products are the ones of the form $G\wr_HH$, where $H$ acts on itself by left multiplication.
 In particular, the group $(\Z/2\Z)\wr_\Z\Z$ has become well-known under the name of the \emph{lamplighter group}.
 Another (trivial) examples of wreath products are direct products $G\times H$ which corresponds to wreath products over a singleton $G\wr_{\{*\}}H$.
 
