--- a/Property FW and wreath products/Bouts/Introduction.tex
+++ b/Property FW and wreath products/Bouts/Introduction.tex
@@ -54,7 +54,7 @@ This is the subject of the forthcoming and more technical \cite{LS2021}, which g
 %
 %
 \paragraph{Organization of the paper}
-The next section contains all the definitions as well as some examples, while Section \ref{Section:Proof} is devoted to the proof of Theorem~\ref{Thm:Main}.
+The next section contains all the definitions as well as some examples, while Section \ref{Section:Proof} is devoted to the proof of Theorem~\ref{Thm:Main} and some related results.
 %
 %
 %
